using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isMoving = "IsMoving";
    internal static string attack = "attack";
    internal static string canMove = "canMove";
    internal static string isGrounded = "isGrounded";
}
